# GameOfLifeRustYew

./: Cargo.toml
src/: components.rs  main.rs
src/components/: cell.rs  game.rs  grid.rs  mod.rs  universe.rs
src/logic/: universe.rs
