[package]
name = "game_of_life_rust_yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
rand = { version = "0.7.3", features = ["small_rng", "wasm-bindgen"] }
log = "0.4.17"
wasm-logger = "0.2.0"
gloo-timers = "0.2.4"